--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,33 +1,59 @@
 :root {
-    --rich-black: #000411;
-    --dark-purple: #160C28;
-    --ash-gray: #AEB7B3;
-    --naple-yellow: #EFCB68;
-    --honey-dew: #E1EFE6;
+    --custom-light-blue: #23395D;
+    --custom-middle-blue: #1C2d4A;
+    --custom-dark-blue: #152238;
+    --custom-white: #FFFFFF
 }
+
+@font-face {
+  font-family: roboto;
+  src: url("assets/fonts/roboto-regular.ttf");
+}
+
+@font-face {
+  font-family: roboto-headers;
+  src: url("assets/fonts/roboto-thin.ttf");
+}
+
+@font-face {
+  font-family: consolas;
+  src: url("assets/fonts/consolas.ttf")
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: roboto-headers;
+  z-index: 100;
+}
+
+* {
+  font-family: roboto;
+  box-sizing: border-box;
+}
+
+.custom-text-small {
+    font-size: 11px;
+}
+
 
 .navbar-item-text-size {
-    font-size: 9px;
+    font-size: 11px;
 }
 
-.bg-rich-black {
-    background-color: var(--rich-black) !important;
+.bg-custom-light-blue {
+    background-color: var(--custom-light-blue) !important;
 }
 
-.bg-dark-purple {
-    background-color: var(--dark-purple) !important;
+.bg-custom-middle-blue {
+    background-color: var(--custom-middle-blue) !important;
 }
 
-.bg-ash-gray {
-    background-color: var(--ash-gray) !important;
-}
-
-.bg-naple-yellow {
-    background-color: var(--naple-yellow) !important;
-}
-
-.bg-honey-dew {
-    background-color: var(--honey-dew) !important;
+.bg-custom-dark-blue {
+    background-color: var(--custom-dark-blue) !important;
 }
 
 .container-custom {
@@ -36,10 +62,6 @@
     width: 100vw;
 
     /* set a min height and width */
-    min-width: 600px;
+    min-width: 575px;
     min-height: 550px;
-}
-
-* {
-    box-sizing: border-box;
 }
