updated recon-tooling tab with a base in the tooling for comment extraction, URL extraction, form highlighting and more

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,9 @@ h6 {
     padding: 0;
 }
 
+.consolas-text {
+    font-family: consolas;
+}
 textarea {
     resize: none !important; /* Disable resizing */
     background-color: #ffffff !important;
