created a base for checklist assistant to build the checks within a chapter

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,3 +90,8 @@ textarea {
     cursor: pointer;
     text-decoration: underline;
 }
+
+.inactive-link {
+   pointer-events: none;
+   cursor: default;
+}
